Integrated SHBE_Data into SHBE_Handler as part of code rationalisation.